Mobile view complete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="btn header-btn">Request Beta Access</button>
       </header>
       <main>
-        <div class="dsktop-view">
+        <div class="desktop-view">
           <div class="tablet-config">
             <section class="mission">
               <div class="main-header">
@@ -145,5 +145,6 @@
         </div>
       </footer>
     </div>
+    <div class="background"></div>
   </body>
 </html>
